globus-dsi-rest (0.21-1+gt6.@distro@) @distro@; urgency=low

  * Favor timeout error over libcurl aborted error

 -- Globus Toolkit <support@globus.org>  Wed, 14 Dec 2016 11:28:51 -0500

globus-dsi-rest (0.20-1+gt6.@distro@) @distro@; urgency=low

  * Favor timeout error over libcurl aborted error

 -- Globus Toolkit <support@globus.org>  Wed, 14 Dec 2016 11:28:51 -0500

globus-dsi-rest (0.20-1+gt6.@distro@) @distro@; urgency=low

  * Add curl cookie/ssl/dns resource sharing between handles

 -- Globus Toolkit <support@globus.org>  Wed, 23 Nov 2016 13:03:46 -0500

globus-dsi-rest (0.18-1+gt6.@distro@) @distro@; urgency=low

  * Improve diagnostics

 -- Globus Toolkit <support@globus.org>  Thu, 03 Nov 2016 09:03:47 -0400

globus-dsi-rest (0.17-1+gt6.@distro@) @distro@; urgency=low

  * Fix some logging issues

 -- Globus Toolkit <support@globus.org>  Fri, 19 Aug 2016 11:26:29 -0400

globus-dsi-rest (0.16-1+gt6.@distro@) @distro@; urgency=low

  * Add eof flag to gridftp_op_arg to pass back EOF state to requester
  * Handle read until EOF in gridftp_op handling

 -- Globus Toolkit <support@globus.org>  Tue, 26 Jul 2016 14:46:05 -0400

globus-dsi-rest (0.15-1+gt6.@distro@) @distro@; urgency=low

  * Track amounts read/written in response callback

 -- Globus Toolkit <support@globus.org>  Tue, 19 Jul 2016 17:40:39 -0400

globus-dsi-rest (0.14-1+gt6.@distro@) @distro@; urgency=low

  * Add globus_dsi_rest_error_is_retryable()

 -- Globus Toolkit <support@globus.org>  Mon, 18 Jul 2016 15:11:39 -0400

globus-dsi-rest (0.13-1+gt6.@distro@) @distro@; urgency=low

  * Test case fixes

 -- Globus Toolkit <support@globus.org>  Fri, 15 Jul 2016 14:05:44 -0400

globus-dsi-rest (0.12-1+gt6.@distro@) @distro@; urgency=low

  * Fix bugs in partial read gridftp_op
  * Propagate error from request instead of allowing curl error code
    to override it.

 -- Globus Toolkit <support@globus.org>  Thu, 14 Jul 2016 17:27:10 -0400
