@@ -1,3 +1,11 @@
+globus-dsi-rest (0.22-1+gt6.@distro@) @distro@; urgency=low
+
+  * Ensure printable log level string is not null.
+  * Leak in read_json
+  * Prefer timeout error over libcurl aborted by callback error
+
+ -- Globus Toolkit <support@globus.org>  Mon, 19 Dec 2016 15:50:55 -0500
+
 globus-dsi-rest (0.21-1+gt6.@distro@) @distro@; urgency=low
 
   * Favor timeout error over libcurl aborted error
